- Make final and private some static variables in CombineGame class. Add accessers for this variables. - Bug correction in menus loop. User can't enter more than one character in the menus choice. - Make final many parameter when this parameter are not change in methods. - Add some comments to explain better how optimizedPool work.